<resources>
    <string name="app_name">CookBook</string>
    <string name="recipe_photo_no_image_description">Recipe photo (not set)</string>
    <string name="recipe_photo_button_description">Take photo of recipe</string>
    <string name="recipe_title_label">Title</string>
    <string name="recipe_title_hint">Enter a title for the recipe</string>
    <string name="recipe_rating_label">Rating</string>
    <string name="recipe_ingredients_label">Ingredients</string>
    <string name="recipe_add_ingredient">Add Ingredient</string>
    <string name="recipe_ingredient_hint">Enter recipe ingredient</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="delete_recipe_dialog_title">
        Are you sure you want to delete this recipe?
        This action cannot be undone
    </string>
    <string name="new_recipe">New Recipe</string>
    <string name="empty_ingredient">Please enter an ingredient</string>
    <string name="subtitle_format">%1$d recipes</string>
    <string name="share_recipe">Share Recipe</string>
    <string-array name="fractions_array">
        <item>1/8</item>
        <item>1/4</item>
        <item>1/2</item>
        <item>3/4</item>
        <item>1</item>
    </string-array>
    <string-array name="measurement_array">
        <item>tsp</item>
        <item>tbsp</item>
        <item>cup</item>
        <item>ounce</item>
        <item>pound</item>
        <item>ml</item>
        <item>liter</item>
    </string-array>
    <string name="recipe_summary">
        %1$s\nIngredients: %2$s\nRating: %3$f
    </string>
    <string name="recipe_summary_subject">Cookbook Recipe Summary</string>
    <string name="send_recipe">Send recipe via</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sort_list">Sort List</string>
    <string name="sort_alphabetically">Sort Alphabetically</string>
    <string name="sort_rating">Sort By Rating</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
</resources>
