<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_item_clear"
        android:title="@string/clear_search"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/new_recipe"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/new_recipe"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/sort_list"
        android:icon="@drawable/ic_menu_sort"
        android:title="@string/sort_list"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/sort_alphabetically"
                android:title="@string/sort_alphabetically"
                />
            <item
                android:id="@+id/sort_rating"
                android:title="@string/sort_rating"
                />
        </menu>
    </item>

</menu>